[package]
name = "petgraph-evcxr"
version = "0.1.1"
authors = ["Timothy Hobbs"]
edition = "2018"
license-file = "COPYING.LGPL"
license = "LGPL-3.0-or-later"
description = "Draw petgraph graphs in jupyter notebook using the evcxr engine"
homepage = "https://github.com/timthelion/petgraph-evcxr"
repository = "https://github.com/timthelion/petgraph-evcxr"

[dependencies]
base64 = ">= 0.10.1"
petgraph = ">=0.5.1"
